Added company-list component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,8 @@
   <h1>
     Welcome to {{ title }}!
   </h1>
-  <input [(ngModel)]="title" />
+
+  <fbc-company-list></fbc-company-list>
+
  </div>
 
-<router-outlet></router-outlet>
