--- a/src/app/company/company-list/company-list.component.html
+++ b/src/app/company/company-list/company-list.component.html
@@ -1,13 +1,29 @@
-<table>
-    <tr>
+<div class="container">
+  <button class="btn btn-success"> Add </button>
+
+  <table class="table table-striped">
+    <thead>
+      <tr>
         <th>Name</th>
         <th>Email</th>
         <th>Phone</th>
-    </tr>
+        <th></th>
+      </tr>
+    </thead>
 
-    <tr *ngFor="let company of companies" >
-      <td> {{ company.name }} </td>
-      <td> {{ company.email }} </td>
-      <td> {{ company.phone }} </td>
-    </tr>
+    <tbody>
+      <tr *ngFor="let company of companies">
+        <td> {{ company.name }} </td>
+        <td> {{ company.email }} </td>
+        <td> {{ company.phone }} </td>
+        <td>
+          <button class="btn btn-warning"> Edit </button>
+          <button class="btn btn-danger"> Delete </button>
+        </td>
+      </tr>
+    </tbody>
   </table>
+</div>
+
+
+<ngb-datepicker></ngb-datepicker>
