--- a/src/app/company/company-list/company-list.component.html
+++ b/src/app/company/company-list/company-list.component.html
@@ -1,28 +1,10 @@
 <div class="container">
   <button class="btn btn-success"> Add </button>
 
-  <table class="table table-striped">
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Email</th>
-        <th>Phone</th>
-        <th></th>
-      </tr>
-    </thead>
-
-    <tbody>
-      <tr *ngFor="let company of companies$ | async">
-        <td> {{ company.name }} </td>
-        <td> {{ company.email }} </td>
-        <td> {{ company.phone }} </td>
-        <td class='company-buttons'>
-          <button class="btn btn-warning"> Edit </button>
-          <button class="btn btn-danger" (click)="deleteCompany(company)"> Delete </button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+  <fbc-company-table
+  [companies]="companies$ | async"
+  (companyDeleted)="deleteCompany($event)"
+  ></fbc-company-table>
 </div>
 
 
