--- a/src/app/company/company-edit/company-edit.component.html
+++ b/src/app/company/company-edit/company-edit.component.html
@@ -1,3 +1,27 @@
-<p>
-  company-edit works!
-</p>
+<div class="container">
+  <form [formGroup]="companyForm" novalidate>
+
+    <div class="form-group">
+      <label for="name">Name</label>
+      <input type="text" class="form-control" name="name" formControlName="name">
+      <div *ngIf="companyForm.get('name').hasError('required') && companyForm.get('name').touched"
+        class="alert alert-danger">
+        Name is required
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label for="phone">Phone</label>
+      <input type="text" class="form-control" name="phone" formControlName="phone" />
+    </div>
+
+    <div class="form-group">
+      <label for="email">Email</label>
+      <input type="text" class="form-control" name="email" formControlName="email" />
+    </div>
+
+    <div class="form-group">
+      <button (click)="saveCompany()" [disabled]="!companyForm.valid" class="btn btn-default">Submit</button>
+    </div>
+  </form>
+</div>
