--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,13 @@
 <nav class="navbar navbar-light bg-faded">
   <a class="navbar-brand">FireBootCamp CRM</a>
   <ul class="navbar-nav ml-auto">
-    <li class="nav-item" [routerLinkActive]="'active'">
-      <a class="nav-link" [routerLink]="['/company/list']">Companies ({{companiesCount$ | async }})</a>
-    </li>
+      <li class="nav-item" [routerLinkActive]="'active'">
+          <a class="nav-link" [routerLink]="['/company/list']">Companies ({{companiesCount$ | async }})</a>
+        </li>
+
+        <li class="nav-item" [routerLinkActive]="'active'">
+            <a class="nav-link" [routerLink]="['/admin']"> Admin </a>
+          </li>
   </ul>
 </nav>
 
